fixed more spacing for the footer

--- a/index.css
+++ b/index.css
@@ -147,6 +147,9 @@ color: #0B5345 ;
     margin-top: 100px;
 }
 
+#logo2{
+    margin-top: 5px;
+} 
 
 #social{
     float: right;
